common: fix deadlocky inflight op visiting in OpTracker.

Fixes: https://tracker.ceph.com/issues/42780
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>